feat (docs): rearange navigation sections for common part

--- a/packages/design-docs/stories/Fundations/Colors/Colors.mdx
+++ b/packages/design-docs/stories/Fundations/Colors/Colors.mdx
@@ -1,11 +1,11 @@
 import { Meta } from "@storybook/blocks"
 
-import HeaderComponent from "../../src/components/Header/Header"
-import Paragraph from "../../src/components/Paragraph/Paragraph"
-import LastUpdate from "../../src/components/LastUpdate/LastUpdate"
-import Accordion from "../../src/components/Accordion/Accordion"
-import Heading from "../../src/components/Heading/Heading"
-import Body from "../../src/components/Body/Body"
+import HeaderComponent from "../../../src/components/Header/Header"
+import Paragraph from "../../../src/components/Paragraph/Paragraph"
+import LastUpdate from "../../../src/components/LastUpdate/LastUpdate"
+import Accordion from "../../../src/components/Accordion/Accordion"
+import Heading from "../../../src/components/Heading/Heading"
+import Body from "../../../src/components/Body/Body"
 
 import List from "./List"
 
@@ -14,7 +14,7 @@ import Example2 from "./assets/example_2.svg"
 import Example3 from "./assets/example_3.svg"
 import Example4 from "./assets/example_4.svg"
 
-<Meta title="Design System/Colors" />
+<Meta title="Fondations/Colors" />
 
 <div style={{display: "flex", flexDirection: "column", gap: "16px"}} className="rte-storybooks_colors">
   <HeaderComponent title="Colors" linkFigma="https://www.figma.com/design/ia8dhN9nUmHUKyR82VicU5/01.1--Primitives?node-id=1-11&p=f">
