--- a/packages/design-docs/stories/Fundations/DesignTokens/DesignTokens.mdx
+++ b/packages/design-docs/stories/Fundations/DesignTokens/DesignTokens.mdx
@@ -1,11 +1,11 @@
 import { Meta } from "@storybook/blocks"
 
-import HeaderComponent from "../../src/components/Header/Header"
-import Paragraph from "../../src/components/Paragraph/Paragraph"
-import LastUpdate from "../../src/components/LastUpdate/LastUpdate"
-import Accordion from "../../src/components/Accordion/Accordion"
-import Heading from "../../src/components/Heading/Heading"
-import Body from "../../src/components/Body/Body"
+import HeaderComponent from "../../../src/components/Header/Header"
+import Paragraph from "../../../src/components/Paragraph/Paragraph"
+import LastUpdate from "../../../src/components/LastUpdate/LastUpdate"
+import Accordion from "../../../src/components/Accordion/Accordion"
+import Heading from "../../../src/components/Heading/Heading"
+import Body from "../../../src/components/Body/Body"
 
 import ExampleToken from "./assets/example_token.svg"
 import Pyramide from "./assets/pyramide.svg"
@@ -16,9 +16,9 @@ import Tableau4 from "./assets/tableau_4.svg"
 import DoDont1 from "./assets/do_dont_1.svg"
 import DoDont2 from "./assets/do_dont_2.svg"
 
-import "../../src/styles/Police.css"
+import "../../../src/styles/Police.css"
 
-<Meta title="Design System/Design Tokens" />
+<Meta title="Fondations/Design Tokens" />
 
 <div style={{display: "flex", flexDirection: "column", gap: "16px"}}>
   <HeaderComponent title="Design Tokens" linkFigma="https://www.figma.com/design/EuNnqaEYErWwe0DgdnXPsB/01.2--Design-Tokens?node-id=0-1&p=f">
