--- a/packages/design-docs/stories/Fundations/Elevation/Elevation.mdx
+++ b/packages/design-docs/stories/Fundations/Elevation/Elevation.mdx
@@ -1,11 +1,11 @@
 import { Meta } from "@storybook/blocks"
 
-import HeaderComponent from "../../src/components/Header/Header"
-import Paragraph from "../../src/components/Paragraph/Paragraph"
-import LastUpdate from "../../src/components/LastUpdate/LastUpdate"
-import Accordion from "../../src/components/Accordion/Accordion"
-import Heading from "../../src/components/Heading/Heading"
-import Body from "../../src/components/Body/Body"
+import HeaderComponent from "../../../src/components/Header/Header"
+import Paragraph from "../../../src/components/Paragraph/Paragraph"
+import LastUpdate from "../../../src/components/LastUpdate/LastUpdate"
+import Accordion from "../../../src/components/Accordion/Accordion"
+import Heading from "../../../src/components/Heading/Heading"
+import Body from "../../../src/components/Body/Body"
 
 import image1 from "./assets/image_1.svg"
 import image2 from "./assets/image_2.svg"
@@ -18,7 +18,7 @@ import image8 from "./assets/image_8.svg"
 import image9 from "./assets/image_9.svg"
 import image10 from "./assets/image_10.svg"
 
-<Meta title="Design System/Elevation" />
+<Meta title="Fondations/Elevation" />
 
 <div style={{display: "flex", flexDirection: "column", gap: "16px"}}>
   <HeaderComponent title="Elevation" linkFigma="https://www.figma.com/design/EuNnqaEYErWwe0DgdnXPsB/01.2--Design-Tokens?node-id=911-1081">
