--- a/packages/design-docs/stories/Fundations/Spacing/Spacing.mdx
+++ b/packages/design-docs/stories/Fundations/Spacing/Spacing.mdx
@@ -14,7 +14,7 @@ import ExampleSpacing_2 from "./assets/exemple_2.svg"
 
 import "../../src/styles/Police.css"
 
-<Meta title="Design System/Spacing" />
+<Meta title="Fondations/Spacing" />
 
 <div style={{display: "flex", flexDirection: "column", gap: "16px"}}>
   <HeaderComponent title="Spacing" linkFigma="https://www.figma.com/design/EuNnqaEYErWwe0DgdnXPsB/01.2--Design-Tokens?node-id=26-2777&p=f&m=dev" linkGithub="https://github.com/rte-france/design-system-rte/blob/main/packages/core/design-tokens/tokens/_spacing.scss">
