--- a/packages/design-docs/stories/Fundations/Typography/Typography.mdx
+++ b/packages/design-docs/stories/Fundations/Typography/Typography.mdx
@@ -15,17 +15,17 @@ import FontScaleTable from "./assets/FontScaleTable.svg";
 import LineHeightExtTable from "./assets/LineHeightExtTable.svg";
 import LetterSpacingTable from "./assets/LetterSpacingTable.svg";
 
-import DocsSection from "../../src/components/DocsSection/DocsSection";
-import HeaderComponent from "../../src/components/Header/Header";
-import LastUpdate from "../../src/components/LastUpdate/LastUpdate";
-import Accordion from "../../src/components/Accordion/Accordion";
+import DocsSection from "../../../src/components/DocsSection/DocsSection";
+import HeaderComponent from "../../../src/components/Header/Header";
+import LastUpdate from "../../../src/components/LastUpdate/LastUpdate";
+import Accordion from "../../../src/components/Accordion/Accordion";
 
-import "../../src/styles/GeneralDocs.scss";
-import "../../src/styles/Police.css"
-import Paragraph from "../../src/components/Paragraph/Paragraph";
-import Body from "../../src/components/Body/Body";
+import "../../../src/styles/GeneralDocs.scss";
+import "../../../src/styles/Police.css"
+import Paragraph from "../../../src/components/Paragraph/Paragraph";
+import Body from "../../../src/components/Body/Body";
 
-<Meta title='Design System/Typographie'/>
+<Meta title='Fondations/Typographie'/>
 
 <div className="docs">
 
