--- a/packages/design-docs/stories/Fundations/Border/Border.mdx
+++ b/packages/design-docs/stories/Fundations/Border/Border.mdx
@@ -1,21 +1,21 @@
 import { Meta } from "@storybook/blocks"
 
-import DocsSection from "../../src/components/DocsSection/DocsSection";
-import HeaderComponent from "../../src/components/Header/Header";
-import LastUpdate from "../../src/components/LastUpdate/LastUpdate";
-import Accordion from "../../src/components/Accordion/Accordion";
+import DocsSection from "../../../src/components/DocsSection/DocsSection";
+import HeaderComponent from "../../../src/components/Header/Header";
+import LastUpdate from "../../../src/components/LastUpdate/LastUpdate";
+import Accordion from "../../../src/components/Accordion/Accordion";
 
-import "../../src/styles/GeneralDocs.scss";
-import "../../src/styles/Police.css"
-import Paragraph from "../../src/components/Paragraph/Paragraph";
-import Body from "../../src/components/Body/Body";
+import "../../../src/styles/GeneralDocs.scss";
+import "../../../src/styles/Police.css"
+import Paragraph from "../../../src/components/Paragraph/Paragraph";
+import Body from "../../../src/components/Body/Body";
 
 import BorderRadius from "./assets/BorderRadius.svg";
 import BorderWidth from "./assets/BorderWidth.svg";
 import BorderRadiusTable from "./assets/BorderRadiusTable.svg";
 import BorderWidthTable from "./assets/BorderWidthTable.svg";
 
-<Meta title='Design System/Borders'/>
+<Meta title='Fondations/Borders'/>
 
 <div className="docs">
 
