--- a/packages/design-docs/stories/Fundations/Grids/Grids.mdx
+++ b/packages/design-docs/stories/Fundations/Grids/Grids.mdx
@@ -1,14 +1,14 @@
 import { Meta } from "@storybook/blocks"
 
-import DocsSection from "../../src/components/DocsSection/DocsSection";
-import HeaderComponent from "../../src/components/Header/Header";
-import LastUpdate from "../../src/components/LastUpdate/LastUpdate";
-import Accordion from "../../src/components/Accordion/Accordion";
+import DocsSection from "../../../src/components/DocsSection/DocsSection";
+import HeaderComponent from "../../../src/components/Header/Header";
+import LastUpdate from "../../../src/components/LastUpdate/LastUpdate";
+import Accordion from "../../../src/components/Accordion/Accordion";
 
-import "../../src/styles/GeneralDocs.scss";
-import "../../src/styles/Police.css"
-import Paragraph from "../../src/components/Paragraph/Paragraph";
-import Body from "../../src/components/Body/Body";
+import "../../../src/styles/GeneralDocs.scss";
+import "../../../src/styles/Police.css"
+import Paragraph from "../../../src/components/Paragraph/Paragraph";
+import Body from "../../../src/components/Body/Body";
 
 import Anatomy from "./assets/Anatomy.svg";
 import BreakpointsTable from "./assets/BreakpointsTable.svg";
@@ -29,7 +29,7 @@ import SidePanelTable from "./assets/SidePanelTable.svg";
 import GridOrLayoutTable from "./assets/GridOrLayoutTable.svg";
 import BestPractices from "./assets/BestPractices.svg";
 
-<Meta title='Design System/Grids'/>
+<Meta title='Fondations/Grids'/>
 
 <div className="docs">
 
