--- a/packages/design-docs/stories/Guidelines/Accessibility.mdx
+++ b/packages/design-docs/stories/Guidelines/Accessibility.mdx
@@ -1,10 +1,10 @@
 import {Meta} from "@storybook/blocks"
 
-import Heading from "../src/components/Heading/Heading";
+import Heading from "../../src/components/Heading/Heading";
 
-import "../src/styles/Police.css";
+import "../../src/styles/Police.css";
 
-<Meta title="Design system/Accessibilité" />
+<Meta title="Guidelines/Accessibilité" />
 <Heading id="accessibilite" level={1}>Accessibilité</Heading>
 
 <p>L’accessibilité fait partie intégrante du Design System.<br/>
