feat (docs): add navigation for GetStarted sections

--- a/packages/design-docs/stories/DesignSystem/GetStartedMigrationKit/Angular.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedMigrationKit/Angular.mdx
@@ -1,9 +1,9 @@
 import { Meta } from "@storybook/blocks";
 
-import "../../src/styles/CodeBlocks.css";
-import "../../src/styles/Police.css";
+import "../../../src/styles/CodeBlocks.css";
+import "../../../src/styles/Police.css";
 
-<Meta title="Bascule/Angular" />
+<Meta title="Design system/Get Started - Kit de migration/Angular" />
 
 <h1 id="migration-angular" style={{fontFamily:"Nunito"}}> Migration depuis Angular Material </h1>
 
