--- a/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/React.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/React.mdx
@@ -1,9 +1,9 @@
 import { Meta } from "@storybook/blocks";
 
-import "../../src/styles/CodeBlocks.css";
-import "../../src/styles/Police.css";
+import "../../../src/styles/CodeBlocks.css";
+import "../../../src/styles/Police.css";
 
-<Meta title="Démarrage/React" />
+<Meta title="Design system/Get Started - Kit de démarrage/React" />
 
 <h1 id="getting-started" style={{fontFamily:"Nunito"}}> Démarrage avec React </h1>
 
@@ -143,7 +143,7 @@ function Example() {
 
 <ul>
   <li> <a href="https://opensource.rte-france.com/design-system-rte/?path=/docs/react_button--docs">Documentation des composants React</a> : Explorez tous les composants disponibles dans le Storybook </li>
-  <li> <a href="https://opensource.rte-france.com/design-system-rte/?path=/docs/bascule--docs">Guide de migration</a> : Si vous utilisez Tailwind déjà dans votre projet </li>
+  <li> <a href="https://opensource.rte-france.com/design-system-rte/?path=/docs/design-system-get-started-kit-de-migration-react--docs">Guide de migration</a> : Si vous utilisez Tailwind déjà dans votre projet </li>
 </ul>
 
 <h2 id="changelogs" style={{border:"none", fontFamily:"Nunito"}}> Changelogs </h2>
