--- a/packages/design-docs/stories/Fundations/Spacing/Spacing.mdx
+++ b/packages/design-docs/stories/Fundations/Spacing/Spacing.mdx
@@ -1,18 +1,18 @@
 import { Meta } from "@storybook/blocks"
 
-import HeaderComponent from "../../src/components/Header/Header"
-import Paragraph from "../../src/components/Paragraph/Paragraph"
-import LastUpdate from "../../src/components/LastUpdate/LastUpdate"
-import Accordion from "../../src/components/Accordion/Accordion"
-import Heading from "../../src/components/Heading/Heading"
-import Body from "../../src/components/Body/Body"
+import HeaderComponent from "../../../src/components/Header/Header"
+import Paragraph from "../../../src/components/Paragraph/Paragraph"
+import LastUpdate from "../../../src/components/LastUpdate/LastUpdate"
+import Accordion from "../../../src/components/Accordion/Accordion"
+import Heading from "../../../src/components/Heading/Heading"
+import Body from "../../../src/components/Body/Body"
 
 import TokenSpacing from "./assets/token_spacing.svg"
 import TokenSpacingNegative from "./assets/token_spacing_negative.svg"
 import ExampleSpacing_1 from "./assets/exemple_1.svg"
 import ExampleSpacing_2 from "./assets/exemple_2.svg"
 
-import "../../src/styles/Police.css"
+import "../../../src/styles/Police.css"
 
 <Meta title="Fondations/Spacing" />
 
