--- a/packages/design-docs/stories/DesignSystem/GetStartedMigrationKit/React.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedMigrationKit/React.mdx
@@ -1,9 +1,9 @@
 import { Meta } from "@storybook/blocks";
 
-import "../../src/styles/CodeBlocks.css";
-import "../../src/styles/Police.css";
+import "../../../src/styles/CodeBlocks.css";
+import "../../../src/styles/Police.css";
 
-<Meta title="Bascule/React" />
+<Meta title="Design system/Get Started - Kit de migration/React" />
 
 <h1 id="migration-react" style={{fontFamily:"Nunito"}}> Migration depuis Material UI </h1>
 
