--- a/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/Angular.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedStartupKit/Angular.mdx
@@ -1,9 +1,9 @@
 import { Meta } from "@storybook/blocks";
 
-import "../../src/styles/CodeBlocks.css";
-import "../../src/styles/Police.css";
+import "../../../src/styles/CodeBlocks.css";
+import "../../../src/styles/Police.css";
 
-<Meta title="Démarrage/Angular" />
+<Meta title="Design system/Get Started - Kit de démarrage/Angular" />
 
 <h1 id="getting-started" style={{fontFamily:"Nunito"}}> Démarrage avec Angular </h1>
 
@@ -141,7 +141,7 @@ export class ExampleComponent {
 
 <ul>
   <li> <a href="https://opensource.rte-france.com/design-system-rte/?path=/docs/angular_button--docs">Documentation des composants Angular</a> : Explorez tous les composants disponibles dans le Storybook </li>
-  <li> <a href="https://opensource.rte-france.com/design-system-rte/?path=/docs/bascule--docs">Guide de migration</a> : Si vous migrez depuis RGO-lib ou si vous utilises Angular Material déjà dans votre projet </li>
+  <li> <a href="https://opensource.rte-france.com/design-system-rte/?path=/docs/design-system-get-started-kit-de-migration-angular--docs">Guide de migration</a> : Si vous migrez depuis RGO-lib ou si vous utilises Angular Material déjà dans votre projet </li>
 </ul>
 
 <h2 id="changelogs" style={{border:"none", fontFamily:"Nunito"}}> Changelogs </h2>
