docs (typography): change title from Typographie to Typography

--- a/packages/design-docs/stories/Fundations/Typography/Typography.mdx
+++ b/packages/design-docs/stories/Fundations/Typography/Typography.mdx
@@ -25,11 +25,11 @@ import "../../../src/styles/Police.css"
 import Paragraph from "../../../src/components/Paragraph/Paragraph";
 import Body from "../../../src/components/Body/Body";
 
-<Meta title='Fondations/Typographie'/>
+<Meta title='Fondations/Typography'/>
 
 <div className="docs">
 
-    <HeaderComponent title="Typographie" linkFigma="https://www.figma.com/design/EuNnqaEYErWwe0DgdnXPsB/01.2--Design-Tokens?node-id=53-623&p=f&m=dev">
+    <HeaderComponent title="Typography" linkFigma="https://www.figma.com/design/EuNnqaEYErWwe0DgdnXPsB/01.2--Design-Tokens?node-id=53-623&p=f&m=dev">
         <Paragraph>La typographie ne se limite pas à un simple choix de polices de caractères. C'est l'art d'organiser les lettres de manière à rendre le texte lisible, compréhensible et visuellement attrayant.</Paragraph>
         <Paragraph>Dans un Design System, la typographie joue un rôle essentiel dans la définition de l'identité visuelle et la hiérarchisation du contenu.</Paragraph>
     </HeaderComponent>
