--- a/packages/design-docs/stories/Fundations/Colors/Colors.mdx
+++ b/packages/design-docs/stories/Fundations/Colors/Colors.mdx
@@ -7,7 +7,7 @@ import Accordion from "../../../src/components/Accordion/Accordion"
 import Heading from "../../../src/components/Heading/Heading"
 import Body from "../../../src/components/Body/Body"
 
-import List from "./List"
+import List from "../../../src/components/List/List"
 
 import Example1 from "./assets/example_1.svg"
 import Example2 from "./assets/example_2.svg"
