--- a/packages/design-docs/stories/DesignSystem/GetStartedContribution/Evolutions/Evolutions.mdx
+++ b/packages/design-docs/stories/DesignSystem/GetStartedContribution/Evolutions/Evolutions.mdx
@@ -26,7 +26,7 @@ import DecisionTree from "./assets/DecisionTree.svg";
 
                 <Body>
                     <DocsSection title="Composants Core et Métier">
-                        Luciole vise à se composer de deux types de composants distincts :
+                        Luciole vise à se composer de **deux types de composants** distincts :
 
                         <ul>
                             <li>**Composants Core** : il s'agit de composants génériques et agnostiques. Les composants Core et les Foundations définissent les bases. Les Core components sont suffisamment agnostiques pour être utilisés par l'ensemble de l'organisation, quelle que soit le métier ou le département.</li>
@@ -43,12 +43,12 @@ import DecisionTree from "./assets/DecisionTree.svg";
 
         <Accordion title="Contribuer au Design System : comment formuler une demande dans Jira">
             <DocsSection>
-                Le Design System de RTE évolue en continu. Pour s’assurer qu’il reste utile, cohérent et aligné avec les besoins du terrain, nous avons ouvert le Jira du projet Design System afin que chaque équipe puisse y formuler ses demandes d’évolution ou de nouveaux composants.
+                Le Design System de RTE évolue en continu. Pour s’assurer qu’il reste utile, cohérent et aligné avec les besoins du terrain, nous avons ouvert le **Jira du projet Design System** afin que chaque équipe puisse y formuler ses demandes d’évolution ou de nouveaux composants.
             </DocsSection>
 
             <Body>
                 <DocsSection title="Utiliser les templates Jira">
-                    Pour les trois premiers types de contributions qui relèvent du Design System (évolution d’un Core, nouveau Métier, nouveau Core), des templates dédiés sont disponibles dans Jira.
+                    Pour les trois premiers types de contributions qui relèvent du Design System (évolution d’un Core, nouveau Métier, nouveau Core), des **templates dédiés** sont disponibles dans Jira.
 
                     🔗 <strong><u>Template A → Évolution d’un composant Core</u></strong>
 
