fix (docs): add missing Figma link to Icons page

--- a/packages/design-docs/stories/Fundations/Icons/Icons.mdx
+++ b/packages/design-docs/stories/Fundations/Icons/Icons.mdx
@@ -21,7 +21,7 @@ import IconSizeTable from "./assets/IconSizeTable.svg";
 
 <div className="docs">
 
-    <HeaderComponent title="Icons" linkFigma="">
+    <HeaderComponent title="Icons" linkFigma="https://www.figma.com/design/tKntdNwiF1x3jSpJ9Q0O0q/01.3-Iconography?node-id=0-1&t=F8wUWoyQ1jdG1PNn-1">
         <Paragraph>Les icônes jouent un rôle essentiel dans les interfaces RTE.</Paragraph>
         <Paragraph>Elles renforcent la compréhension, facilitent la navigation et améliorent la lisibilité des actions et statuts.</Paragraph>
     </HeaderComponent>
